--- a/versions.yaml
+++ b/versions.yaml
@@ -72,10 +72,10 @@ assets:
 
     cloud_hypervisor:
       description: "Cloud Hypervisor is an open source Virtual Machine Monitor"
-      url: "https://github.com/cloud-hypervisor/cloud-hypervisor"
+      url: "https://github.com/vbatts/cloud-hypervisor"
       uscan-url: >-
         https://github.com/cloud-hypervisor/cloud-hypervisor/tags.*/v?(\d\S+)\.tar\.gz
-      version: "v23.0"
+      version: "runtime_flag"
 
     firecracker:
       description: "Firecracker micro-VMM"
